--- a/hystrix-contrib/hystrix-metrics-event-stream-jaxrs/src/test/resources/test.properties
+++ b/hystrix-contrib/hystrix-metrics-event-stream-jaxrs/src/test/resources/test.properties
@@ -1,4 +1,4 @@
 hystrix.stream.utilization.intervalInMilliseconds=10
 hystrix.stream.dashboard.intervalInMilliseconds=10
-hystrix.stream.config.intervalInMilliseconds=10
-hystrix.config.stream.maxConcurrentConnections=3
+hystrix.stream.com.aaron.ren.config.intervalInMilliseconds=10
+hystrix.com.aaron.ren.config.stream.maxConcurrentConnections=3
