--- a/hystrix-examples-webapp/build.gradle
+++ b/hystrix-examples-webapp/build.gradle
@@ -1,5 +1,15 @@
 apply plugin: 'war'
-apply from: 'https://raw.github.com/akhikhl/gretty/master/pluginScripts/gretty.plugin'
+//apply from: 'https://raw.github.com/akhikhl/gretty/master/pluginScripts/gretty.plugin'
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath 'org.akhikhl.gretty:gretty:+'
+    }
+}
+
+apply plugin: 'org.akhikhl.gretty'
 
 dependencies {
     compileApi project(':hystrix-core')
