--- a/hystrix-examples-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/hystrix-examples-webapp/src/main/webapp/WEB-INF/web.xml
@@ -45,7 +45,7 @@
 
 	<servlet-mapping>
 		<servlet-name>HystrixConfigSseServlet</servlet-name>
-		<url-pattern>/hystrix/config.stream</url-pattern>
+		<url-pattern>/hystrix/com.aaron.ren.config.stream</url-pattern>
 	</servlet-mapping>
 
     <servlet>
