--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,10 @@
 buildscript {
     repositories {
-        jcenter()
+       // jcenter()
+        maven {
+            name "aliyunmaven"
+            url "https://maven.aliyun.com/nexus/content/groups/public/"
+        }
     }
     dependencies {
         classpath 'com.netflix.nebula:gradle-extra-configurations-plugin:3.0.3'
@@ -19,7 +23,11 @@ ext {
 
 allprojects {
     repositories {
-        jcenter()
+      //  jcenter()
+        maven {
+            name "aliyunmaven"
+            url "https://maven.aliyun.com/nexus/content/groups/public/"
+        }
     }
 
     apply plugin: 'net.saliman.cobertura'
