--- a/hystrix-serialization/build.gradle
+++ b/hystrix-serialization/build.gradle
@@ -1,6 +1,10 @@
 repositories {
-    mavenCentral()
-    jcenter()
+    //mavenCentral()
+    //jcenter()
+    maven {
+        name "aliyunmaven"
+        url "https://maven.aliyun.com/nexus/content/groups/public/"
+    }
 }
 
 sourceCompatibility = JavaVersion.VERSION_1_6
